--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "jest --watchAll"
+    "test": "jest --watch"
   },
   "dependencies": {
     "core-js": "^3.8.3",
